@@ -1,0 +1,9 @@
+<?php
+
+namespace Akyos\MpdfBundle;
+
+use Symfony\Component\HttpKernel\Bundle\Bundle;
+
+class AkyosMpdfBundle extends Bundle
+{
+}
