@@ -3,14 +3,14 @@ Installation
 ### Using Composer (Symfony 2.x, Symfony 3.0.x)
 
 * Run a command
-<pre><code>composer require tfox/mpdf-port-bundle
+<pre><code>composer require akyos/mpdf-bundle
 </code></pre>
 
 * Add a new line to `app/AppKernel.php`:
-<pre><code>$bundles = array(
+<pre><code>$bundles = [
   ...
-  new TFox\MpdfPortBundle\TFoxMpdfPortBundle(),
-)
+  new Akyos\MpdfBundle\AkyosMpdfBundle(),
+]
 </code></pre>
 
 
@@ -18,17 +18,17 @@ Installation
 ### Using deps-file (Symfony 2.0.x)
 
 * Add a new entry to your `deps` file:
-<pre><code>[TFoxMpdfPortBundle]
-    git=https://bitbucket.org/tasmanianfox/mpdfportbundle.git
-    target=/bundles/TFox/MpdfPortBundle 
+<pre><code>[AkyosMpdfBundle]
+    git=https://github.com/akyoscommunication/mpdf-bundle.git
+    target=/bundles/Akyos/MpdfBundle 
 </code></pre>
 
 * Add a new line to `app/AppKernel.php`:
-<pre><code>new TFox\MpdfPortBundle\TFoxMpdfPortBundle(), 
+<pre><code>new Akyos\MpdfBundle\AkyosMpdfBundle(), 
 </code></pre>
 
 * Add a new line to `app/autoload.php`:
-<pre><code>'TFox' => __DIR__.'/../vendor/bundles',
+<pre><code>'Akyos' => __DIR__.'/../vendor/bundles',
 </code></pre>
 
 * Run a command
@@ -41,15 +41,15 @@ A Quick Start guide
 This small example creates a PDF document with format A4 and portrait orientation:
 <pre><code>public function indexAction()
 {
-   return new \TFox\MpdfPortBundle\Response\PDFResponse($this->getMpdfService()->generatePdf('Hello World'));
+   return new \Akyos\MpdfBundle\Response\PDFResponse($this->getMpdfService()->generatePdf('Hello World'));
 }
 
 /**
- * @return \TFox\MpdfPortBundle\Service\PDFService
+ * @return \Akyos\MpdfBundle\Service\PDFService
  */
 private function getMpdfService()
 {
-  return $this->get('t_fox_mpdf_port.pdf');
+  return $this->get('akyos_mpdf.pdf');
 }
 </code></pre>
 
@@ -68,9 +68,9 @@ Additional options might be passed via the second argument:
 
 <pre><code>public function indexAction()
 {
-    return new \TFox\MpdfPortBundle\Response\PDFResponse($this->getMpdfService()->generatePdf('Hello World', array(
+    return new \Akyos\MpdfBundle\Response\PDFResponse($this->getMpdfService()->generatePdf('Hello World', [
             'format' => 'A4-L' // A4 page, landscape orientation
-    )));
+    ]));
 }
 </code></pre>
 
