@@ -1,3 +1,3 @@
 return [
-    TFox\MpdfPortBundle\TFoxMpdfPortBundle::class => ['all' => true],
+    Akyos\MpdfBundle\AkyosMpdfBundle::class => ['all' => true],
 ];
