@@ -3,8 +3,8 @@ namespace App\Controller;
 
 use Symfony\Component\HttpFoundation\Response;
 use Symfony\Component\Routing\Annotation\Route;
-use TFox\MpdfPortBundle\Response\PDFResponse;
-use TFox\MpdfPortBundle\Service\PDFService;
+use Akyos\MpdfBundle\Response\PDFResponse;
+use Akyos\MpdfBundle\Service\PDFService;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
 
 class DefaultController extends AbstractController
